<resources>
    <string name="app_name" translatable="false">MangaJap</string>
    <string name="loading_error_title">An error occurred</string>
    <string name="loading_error_retry">Retry</string>
    <string name="main_menu_home">Home</string>
    <string name="main_menu_search">Search</string>
    <string name="home_swiper_read_now">Read now</string>
    <string name="search_input_hint">Search</string>
    <string name="manga_tab_chapters">Chapters</string>
    <string name="manga_tab_volumes">Volumes</string>
    <string name="error">An error has occurred</string>
    <string name="serverError">Our servers are temporarily unavailable</string>
    <string name="dataNotSave">Data could not be saved</string>
    <string name="storagePermissionNotGranted">Storage permission not granted</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">OK</string>
    <string name="login">Login</string>
    <string name="connection">Connection</string>
    <string name="loginExplanation">Login to your account</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="registerExplanation">Create a new account</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot password ?</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="pseudo">Pseudo</string>
    <string name="email">Email</string>
    <string name="pseudoOrEmail">Pseudo or email</string>
    <string name="emailInvalid">Email invalid</string>
    <string name="pseudoInvalid">Pseudo must only contain letters, numbers and underscore and must be between 3 to 60 characters long</string>
    <string name="passwordInvalid">Password must contain minimum 8 characters and must only contain letters, numbers and special characters (_@$!%*#?&amp;)</string>
    <string name="discover">Discover</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="users">Users</string>
    <string name="userCount">%d members</string>
    <string name="profilePicture">Profile picture</string>
    <string name="manga">Manga</string>
    <string name="anime">Anime</string>
    <string name="edit">Edit</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="mangasFollows">Mangas follows</string>
    <string name="animeFollows">Animes follows</string>
    <string name="mangaList">Manga list</string>
    <string name="favoritesManga">Favorites manga</string>
    <string name="animeList">Anime list</string>
    <string name="favoritesAnime">Favorites anime</string>
    <string name="seeAll">See all</string>
    <string name="followers">Followers</string>
    <string name="settings">Settings</string>
    <string name="editProfile">Edit profile</string>
    <string name="account">Account</string>
    <string name="changePassword">Change your password</string>
    <string name="newPassword">New password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="passwordDontMatch">Password don\'t match</string>
    <string name="personalInformation">Personal information</string>
    <string name="birthday">Birthday</string>
    <string name="date">Date</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
    <string name="listEmpty">This list is empty</string>
    <string name="filter">Filter</string>
    <string name="show_all_reviews">All reviews</string>
    <string name="summary">Summary</string>
    <string name="SinceThe">Since the %s</string>
    <string name="CompletedSinceThe">Completed since the %s</string>
    <string name="OnHoldSinceThe">On hold since the %s</string>
    <string name="DroppedSinceThe">Dropped since the %s</string>
    <string name="mangaUserCount">Manga added by %d people</string>
    <string name="deleteTheManga">Delete the manga</string>
    <string name="imageSaved">Image saved</string>
    <string name="imageNotSaved">Image not saved</string>
    <string name="share">Share</string>
    <string name="shareManga">%s on MangaJap\nhttps://play.google.com/store/apps/details?id=com.tanasi.mangajap</string>
    <string name="doYouOwnThisBook">Do you own this book ?</string>
    <string name="synopsis">Synopsis</string>
    <string name="type">Type</string>
    <string name="progression">Progression</string>
    <string name="volumesRead">Volumes read</string>
    <string name="VolumesRead">Volumes read / %d</string>
    <string name="chaptersRead">Chapters read</string>
    <string name="ChaptersRead">Chapters read / %d</string>
    <string name="score">Score</string>
    <string name="startedThe">Started the</string>
    <string name="completedThe">Completed the</string>
    <string name="readMore">Read more</string>
    <string name="shareAnime">The anime %s on MangaJap https://play.google.com/store/apps/details?id=com.tanasi.mangajap</string>
    <string name="episodes">Episodes</string>
    <string name="episodes_watched">Episodes watched</string>
    <string name="EpisodesWatch">Episodes watch / %d</string>
    <string name="general">General</string>
    <string name="language">Language</string>
    <string name="defineALanguage">Define a language</string>
    <string name="theme">Theme</string>
    <string name="defineATheme">Define a theme</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="logoutConfirmation">Are you sure you want to logout ?</string>
    <string name="aboutDescription">Developed by Lory-Stan TANASI\nSince December 29, 2018</string>
    <string name="copyright">© %d %s. All rights reserved</string>
    <string name="version">Version</string>
    <string name="privacyPolicy">Privacy policy</string>
    <string name="userId">User ID</string>
    <string name="identification">Identification</string>
    <string name="changeEmail">Change email address</string>
    <string name="changePseudo">Change pseudo</string>
    <string name="volumeCount">%d volumes</string>
    <string name="chapterCount">%d chapters</string>
    <string name="approximatelyVolumeCount">~%d volumes</string>
    <string name="approximatelyChapterCount">~%d chapters</string>
    <string name="aboutYou">Say something about you</string>
    <string name="none">None</string>
    <string name="country">Country</string>
    <string name="insertReview">Enter your comment</string>
    <string name="publish">Publish</string>
    <string name="reviewRules">Do not insult other users. No racist comments. Respect everyone.</string>
    <string name="doNotSpoil">Do not spoil</string>
    <string name="reviewInvalid">Review invalid</string>
    <string name="anyFollowers">%s has any followers</string>
    <string name="anyFollowing">%s has any following</string>
    <string name="contactUs">Contact us</string>
    <string name="contactUsSummary">If you need help</string>
    <string name="rate">Rate</string>
    <string name="rateSummary">Write a review</string>
    <string name="success">Success</string>
    <string name="episodeCount">%d episodes</string>
    <string name="seasonCount">%d seasons</string>
    <string name="approximatelyEpisodeCount">~%d episodes</string>
    <string name="approximatelySeasonCount">~%d seasons</string>
    <string name="animeUserCount">Anime added by %d people</string>
    <string name="seasonNumber">Season %d</string>
    <string name="show_all_episodes">All episodes</string>
    <string name="followsYou">Follows you</string>
    <string name="followed">Following</string>
    <string name="deleteAnime">Delete the anime</string>
    <string name="add_manga_to_library">Add manga</string>
    <string name="add_anime_to_library">Add anime</string>
    <string name="added_to_library">Added</string>
    <string name="timeSpentOnAnime">Time spent : anime</string>
    <string name="months">Months</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="trendingManga">Trending manga</string>
    <string name="trendingAnime">Trending anime</string>
    <string name="watchTrailer">Watch trailer</string>
    <string name="oauthErrorInvalidGrant">Your username or password is incorrect</string>
    <string name="genderMen">Men</string>
    <string name="genderWomen">Women</string>
    <string name="genderOther">Other</string>
    <string name="sortByTitle">Title</string>
    <string name="sortByModificationDate">Modification date</string>
    <string name="sortByScore">Score</string>
    <string name="sortByProgression">Progression</string>
    <string name="sortByReleaseDate">Release date</string>
    <string name="device_theme">Device theme</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="staffRoleAuthor">Author</string>
    <string name="staffRoleIllustrator">Illustrator</string>
    <string name="staffRoleStoryAndArt">Story &amp; art</string>
    <string name="staffRoleProducer">Producer</string>
    <string name="staffRoleLicensor">Licensor</string>
    <string name="staffRoleStudio">Studio</string>
    <string name="staffRoleOriginalCreator">Original creator</string>
    <string name="mangaStatusPublishing">Publishing</string>
    <string name="mangaStatusFinished">Finished</string>
    <string name="mangaStatusUnreleased">Unreleased</string>
    <string name="mangaStatusUpcoming">Upcoming</string>
    <string name="mangaEntryStatusReading">Currently reading</string>
    <string name="mangaEntryStatusCompleted">Completed</string>
    <string name="mangaEntryStatusPlanned">Plan to read</string>
    <string name="mangaEntryStatusOnHold">On hold</string>
    <string name="mangaEntryStatusDropped">Dropped</string>
    <string name="animeStatusAiring">Currently airing</string>
    <string name="animeStatusFinished">Finished</string>
    <string name="animeStatusUnreleased">Unreleased</string>
    <string name="animeStatusUpcoming">Upcoming</string>
    <string name="animeEntryStatusWatching">Currently watching</string>
    <string name="animeEntryStatusCompleted">Completed</string>
    <string name="animeEntryStatusPlanned">Plan to watch</string>
    <string name="animeEntryStatusOnHold">On hold</string>
    <string name="animeEntryStatusDropped">Dropped</string>
    <string name="mangaTypeBd">BD</string>
    <string name="mangaTypeComics">Comics</string>
    <string name="mangaTypeSeinen">Seinen</string>
    <string name="mangaTypeShonen">Shōnen</string>
    <string name="mangaTypeShojo">Shōjo</string>
    <string name="mangaTypeDoujin">Doujin</string>
    <string name="mangaTypeNovel">Novel</string>
    <string name="mangaTypeOneshot">Oneshot</string>
    <string name="mangaTypeJosei">Josei</string>
    <string name="mangaTypeKodomo">Kodomo</string>
    <string name="mangaTypeSeijin">Seijin</string>
    <string name="animeTypeTv">TV</string>
    <string name="animeTypeOva">OVA</string>
    <string name="animeTypeOna">ONA</string>
    <string name="animeTypeMovie">Movie</string>
    <string name="animeTypeMusic">Music</string>
    <string name="animeTypeSpecial">Special</string>
    <string name="franchiseRoleAdaptation">Adaptation</string>
    <string name="franchiseRoleAlternativeSetting">Alternative setting</string>
    <string name="franchiseRoleAlternativeVersion">Alternative version</string>
    <string name="franchiseRoleCharacter">Character</string>
    <string name="franchiseRoleFullStory">Full story</string>
    <string name="franchiseRoleOriginalAdaptation">Adaptation</string>
    <string name="franchiseRoleOther">Other</string>
    <string name="franchiseRoleParentStory">Parent story</string>
    <string name="cache">Cache</string>
    <string name="clearCache">Clear cache</string>
    <string name="currentPassword">Current password</string>
</resources>