<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/identification"
        android:layout="@layout/item_settings_preference_category">

        <Preference android:title="@string/pseudo"
            android:layout="@layout/item_settings_preference"
            android:key="pseudo"
            android:summary=" "/>

        <Preference android:title="@string/email"
            android:layout="@layout/item_settings_preference"
            android:key="email"
            android:summary=" "/>

        <Preference android:title="@string/userId"
            android:layout="@layout/item_settings_preference"
            android:key="userId"
            android:summary=" "/>

        <Preference android:title="@string/changePassword"
            android:layout="@layout/item_settings_preference"
            android:key="changePassword"/>

    </PreferenceCategory>

    <Preference android:key="logout"
        android:layout="@layout/preference_settings_account_logout"/>

</PreferenceScreen>