<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundSecondaryColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/view_app_bar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText android:id="@+id/review_EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="top|start"
                android:hint="@string/insertReview"
                android:inputType="textMultiLine"
                android:padding="@dimen/reviews_spacing"
                android:textColor="?attr/textPrimaryColor"
                android:textColorHint="?attr/textColorHint"
                android:textSize="14sp"
                tools:ignore="Autofill" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:padding="@dimen/reviews_spacing">

                <View
                    android:layout_width="6dp"
                    android:layout_height="match_parent"
                    android:background="?attr/colorAccent"
                    android:layout_marginEnd="@dimen/reviews_spacing"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/doNotSpoil"
                        android:textColor="?attr/textColorHint"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reviewRules"
                        android:textColor="?attr/textColorHint"/>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <include android:id="@+id/is_loading"
        layout="@layout/layout_is_loading"/>

</RelativeLayout>
